tui/src/views/snapshots/toon_console_tui__views__account__tests__renders_the_signed_out_state.snap
---
source: src/views/account.rs
assertion_line: 1015
expression: output
---
┌ Connect a remote signer ────────────────────────────┐┌ Use the local keystore (encrypted file) ────────────┐
│NIP-46: Amber, nsec.app or `nak bunker`. The key     ││Sealed into                                          │
│never leaves it.                                     ││/home/tester/.config/toon-console/keystore.json.     │
│                                                     ││                                                     │
│Bunker URI: ▏                                        ││(x) Generate                                         │
│Keystore passphrase: …                               ││( ) Import nsec                                      │
│                                                     ││( ) Import mnemonic                                  │
│ Connect                                             ││Keystore passphrase: …                               │
└─────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────┘
┌ Signers on this machine ───────────────────────────────────────────────────────────────────────────────────┐
│agent  local key   Sign in   Forget                                                                         │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Network profile ───────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Devnet  ○ Sandbox                                                                                        │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
