tui/src/views/snapshots/toon_console_tui__views__account__tests__the_profile_list_marks_an_overridden_or_added_profile_and_not_a_plain_built_in.snap
---
source: src/views/account.rs
expression: output
---
┌ Account ───────────────────────────────────────────────────────────────────────────────────────────────────┐
│Agent Smith                                                                                                 │
│npub1exampleexampleexampleexampleexampleexampleexampleexamplex                                              │
│                                                                                                            │
│Signer: agent (local keystore)                                                                              │
│Relays: the account's own relays (NIP-65): wss://relay.devnet.toonprotocol.dev                              │
│                                                                                                            │
│ Sign out                                                                                                   │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Chain Seed ────────────────────────────────────────────────────────────────────────────────────────────────┐
│Reading…                                                                                                    │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Network profile ───────────────────────────────────────────────────────────────────────────────────────────┐
│ ● Devnet ✎user  ○ Sandbox  ○ My devnet fork ✎user                                                          │
│                                                                                                            │
│                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
